minikube-deployment.yaml
# dmp namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dmp
---
# assessment-service-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: assessment-service-ingress
  namespace: kube-system
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: gov-cio.test
      http:
        paths:
          - path: /assessment
            backend:
              serviceName: assessment-service-app
              servicePort: 9090
#          - path: /currency
#            backend:
#              serviceName: assessment-service-app
#              servicePort: 9090
---
# assessment-service-app (external name)
apiVersion: v1
kind: Service
metadata:
  name: assessment-service-app
  namespace: kube-system
spec:
  externalName: assessment-service-app.dmp.svc.cluster.local
  type: ExternalName
  
---
# assessment-service-app
apiVersion: v1
kind: Service
metadata:
  name: assessment-service-app
  namespace: dmp
spec:
  ports:
    - name: http
      port: 9090
      targetPort: 8080
      protocol: TCP
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: assessment-service-app
  type: NodePort 

---
# assessment service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment-service-app
  namespace: dmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assessment-service-app
  template:
    metadata:
      labels:
        app: assessment-service-app
    spec:
      containers:
        - name: assessment-service-app
          image: williamdrew/assessment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
